$Id$

2015-04-18  Christian Franke  <franke@computer.org>

	os_win32.cpp: Add SAT autodetection based on info from
	IOCTL_STORAGE_QUERY_PROPERTY.

2015-04-17  Christian Franke  <franke@computer.org>

	os_win32.cpp: Detect SAT layer of certain Intel AHCI drivers.

2015-04-15  Christian Franke  <franke@computer.org>

	smartctl.8.in, smartd.8.in, update-smart-drivedb.8.in:
	Add REPORTING BUGS section.
	smartctl.8.in, smartd.8.in:
	Rename RETURN VALUE section to EXIT STATUS.
	smartd.8.in: Remove no longer used exit status 9.

2015-04-14  Christian Franke  <franke@computer.org>

	autogen.sh: automake 1.15 works.
	Print 'deprecated' warning if automake < 1.10 is used.

2015-04-08  Christian Franke  <franke@computer.org>

	configure.ac: Print 'deprecated' warning if autoconf 2.5x or
	--with-docdir option is used.
	Add comments to fix vim syntax coloring.
	smartctl.8.in, smartd.8.in, smartd.conf.5.in:
	Remove EXPERIMENTAL notes for features added before 6.3.

2015-03-29  Christian Franke  <franke@computer.org>

	ataprint.cpp: Read only required log pages of Extended Comprehensive
	Error log.  This adds support for logs with many pages (ticket #498).
	atacmds.cpp, atacmds.h, smartd.cpp: Add 'page' parameter to function
	ataReadExtErrorLog().

2015-03-22  Christian Franke  <franke@computer.org>

	os_linux.cpp, smartctl.8.in, smartd.8.in, smartd.conf, smartd.conf.5.in,
	smartd.cpp: Remove old Linux IDE device names (/dev/hdX) in man pages
	and help texts.

2015-03-21  Christian Franke  <franke@computer.org>

	smartd.8.in, smartd.cpp: Clarify smartd '--capabilities' option
	(ticket #523).

2015-03-20  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron MX100/MX200/M5x0/M600 Client SSDs: Rename, add MX200
	- Sandforce Driven SSDs: ATP Velocity MIV, Mushkin Chronos Enhanced
	- Indilinx Barefoot 3 based SSDs: OCZ VERTEX 460, OCZ AMD Radeon R7
	- Intel 530 Series SSDs: mSATA variant
	- JMicron based SSDs: ADATA SP310